--- a/app/src/main/res/layout/activity_record_info.xml
+++ b/app/src/main/res/layout/activity_record_info.xml
@@ -142,145 +142,6 @@
                 app:layout_constraintStart_toEndOf="@+id/textView14"
                 app:layout_constraintTop_toBottomOf="@+id/bodyLocationSpinner" />
 
-            <android.support.constraint.ConstraintLayout
-                android:id="@+id/photoLayout"
-                android:layout_width="0dp"
-                android:layout_height="708dp"
-                android:layout_marginTop="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/commentTextView">
-
-                <ImageView
-                    android:id="@+id/picView0"
-                    android:layout_width="135dp"
-                    android:layout_height="136dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    app:layout_constraintEnd_toStartOf="@+id/picView1"
-                    app:layout_constraintHorizontal_bias="0.5"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@android:drawable/ic_menu_add" />
-
-                <ImageView
-                    android:id="@+id/picView1"
-                    android:layout_width="135dp"
-                    android:layout_height="136dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    app:layout_constraintBottom_toTopOf="@+id/picView2"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.5"
-                    app:layout_constraintStart_toEndOf="@+id/picView0"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@android:drawable/ic_menu_add" />
-
-                <ImageView
-                    android:id="@+id/picView2"
-                    android:layout_width="135dp"
-                    android:layout_height="136dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    app:layout_constraintEnd_toStartOf="@+id/picView3"
-                    app:layout_constraintHorizontal_bias="0.5"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/picView0"
-                    app:srcCompat="@android:drawable/ic_menu_add" />
-
-                <ImageView
-                    android:id="@+id/picView4"
-                    android:layout_width="135dp"
-                    android:layout_height="136dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    app:layout_constraintEnd_toStartOf="@+id/picView5"
-                    app:layout_constraintHorizontal_bias="0.5"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/picView2"
-                    app:srcCompat="@android:drawable/ic_menu_add" />
-
-                <ImageView
-                    android:id="@+id/picView6"
-                    android:layout_width="135dp"
-                    android:layout_height="136dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    app:layout_constraintEnd_toStartOf="@+id/picView7"
-                    app:layout_constraintHorizontal_bias="0.5"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/picView4"
-                    app:srcCompat="@android:drawable/ic_menu_add" />
-
-                <ImageView
-                    android:id="@+id/picView8"
-                    android:layout_width="135dp"
-                    android:layout_height="136dp"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/picView9"
-                    app:layout_constraintHorizontal_bias="0.5"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/picView6"
-                    app:srcCompat="@android:drawable/ic_menu_add" />
-
-                <ImageView
-                    android:id="@+id/picView5"
-                    android:layout_width="135dp"
-                    android:layout_height="136dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginTop="8dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.5"
-                    app:layout_constraintStart_toEndOf="@+id/picView4"
-                    app:layout_constraintTop_toBottomOf="@+id/picView3"
-                    app:srcCompat="@android:drawable/ic_menu_add" />
-
-                <ImageView
-                    android:id="@+id/picView7"
-                    android:layout_width="135dp"
-                    android:layout_height="136dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginTop="8dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.5"
-                    app:layout_constraintStart_toEndOf="@+id/picView6"
-                    app:layout_constraintTop_toBottomOf="@+id/picView5"
-                    app:srcCompat="@android:drawable/ic_menu_add" />
-
-                <ImageView
-                    android:id="@+id/picView9"
-                    android:layout_width="135dp"
-                    android:layout_height="136dp"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginTop="8dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.5"
-                    app:layout_constraintStart_toEndOf="@+id/picView8"
-                    app:layout_constraintTop_toBottomOf="@+id/picView7"
-                    app:srcCompat="@android:drawable/ic_menu_add" />
-
-                <ImageView
-                    android:id="@+id/picView3"
-                    android:layout_width="135dp"
-                    android:layout_height="136dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginTop="8dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.5"
-                    app:layout_constraintStart_toEndOf="@+id/picView2"
-                    app:layout_constraintTop_toBottomOf="@+id/picView1"
-                    app:srcCompat="@android:drawable/ic_menu_add" />
-
-            </android.support.constraint.ConstraintLayout>
-
             <Button
                 android:id="@+id/buttonSaveChanges"
                 android:layout_width="0dp"
@@ -319,11 +180,39 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:text="No Comment"
-                app:layout_constraintBottom_toTopOf="@+id/photoLayout"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView20" />
+
+            <Button
+                android:id="@+id/buttonViewPhotos"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:text="View Photos"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/buttonAddPhoto"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/commentTextView" />
+
+            <Button
+                android:id="@+id/buttonAddPhoto"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:text="Add Photo"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/buttonViewPhotos"
+                app:layout_constraintTop_toBottomOf="@+id/commentTextView" />
 
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
@@ -334,7 +223,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/scrollViewPhotos"
         app:menu="@menu/navigation" />
