added to the gallery functionality

--- a/app/src/main/res/layout/activity_record_info.xml
+++ b/app/src/main/res/layout/activity_record_info.xml
@@ -175,10 +175,11 @@
             <Button
                 android:id="@+id/buttonViewPhotos"
                 android:layout_width="wrap_content"
+                android:onClick="openPhotos"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 android:layout_marginStart="8dp"
-                android:text="View Photos"
+                android:text="@string/view_photos"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/buttonAddPhoto"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -193,7 +194,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:text="Add Photo"
+                android:text="@string/add_photo"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
