--- a/app/src/main/res/layout/activity_record_info.xml
+++ b/app/src/main/res/layout/activity_record_info.xml
@@ -8,8 +8,8 @@
 
     <ScrollView
         android:id="@+id/scrollViewPhotos"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@+id/navigation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -25,9 +25,9 @@
                 android:id="@+id/editTextDescription"
                 android:layout_width="366dp"
                 android:layout_height="135dp"
-                android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="16dp"
+                android:layout_marginEnd="8dp"
                 android:ems="10"
                 android:gravity="top|left"
                 android:inputType="textMultiLine"
@@ -53,9 +53,9 @@
                 android:id="@+id/bodyLocationSpinner"
                 android:layout_width="0dp"
                 android:layout_height="24dp"
-                android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/textView13"
@@ -65,9 +65,9 @@
                 android:id="@+id/recordTitleEdit"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="16dp"
+                android:layout_marginEnd="8dp"
                 android:ems="10"
                 android:inputType="textPersonName"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -92,9 +92,9 @@
                 android:id="@+id/textView15"
                 android:layout_width="0dp"
                 android:layout_height="29dp"
-                android:layout_marginEnd="8dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="24dp"
+                android:layout_marginEnd="8dp"
                 android:text="Description"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toStartOf="@+id/buttonSaveChanges"
@@ -119,9 +119,9 @@
                 android:id="@+id/textView11"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
                 android:text="Record Information"
                 android:textSize="24sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -132,9 +132,9 @@
                 android:id="@+id/buttonViewLocation"
                 android:layout_width="0dp"
                 android:layout_height="48dp"
-                android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
                 android:text="View Location"
                 app:layout_constraintBottom_toTopOf="@+id/buttonSaveChanges"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -146,9 +146,9 @@
                 android:id="@+id/buttonSaveChanges"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
                 android:text="Save Changes"
                 app:layout_constraintBottom_toTopOf="@+id/editTextDescription"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -161,9 +161,9 @@
                 android:id="@+id/textView20"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
                 android:text="Comment"
                 android:textSize="18sp"
                 app:layout_constraintBottom_toTopOf="@+id/commentTextView"
@@ -176,8 +176,8 @@
                 android:id="@+id/buttonViewPhotos"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
                 android:layout_marginStart="8dp"
+                android:layout_marginBottom="8dp"
                 android:text="View Photos"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/buttonAddPhoto"
@@ -189,10 +189,10 @@
                 android:id="@+id/buttonAddPhoto"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
                 android:text="Add Photo"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -204,9 +204,9 @@
                 android:id="@+id/editTextComment"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
                 android:ems="10"
                 android:enabled="false"
                 android:inputType="textMultiLine"
@@ -216,16 +216,5 @@
 
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
-
-    <android.support.design.widget.BottomNavigationView
-        android:id="@+id/navigation"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scrollViewPhotos"
-        app:menu="@menu/navigation" />
 
 </android.support.constraint.ConstraintLayout>
