--- a/app/src/main/res/layout/activity_account_settings.xml
+++ b/app/src/main/res/layout/activity_account_settings.xml
@@ -6,6 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".AccountSettingsFragment">
 
+    <include
+        android:id="@+id/fragment_titlebar"
+        layout="@layout/fragment_title_bar"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/titlebar_height"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <EditText
         android:id="@+id/phoneText"
         android:layout_width="335dp"
@@ -39,14 +48,14 @@
         android:id="@+id/textView5"
         android:layout_width="335dp"
         android:layout_height="35dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
         android:text="@string/accountSettingsText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.515"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/fragment_titlebar" />
 
     <EditText
         android:id="@+id/emailText"
@@ -94,10 +103,10 @@
         android:text="@string/resetPasswordText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/titlebar" />
 
     <LinearLayout
-        android:id="@+id/linearLayout"
+        android:id="@+id/titlebar"
         android:layout_width="335dp"
         android:layout_height="46dp"
         android:layout_marginTop="8dp"
