--- a/app/src/main/res/layout/activity_record_info.xml
+++ b/app/src/main/res/layout/activity_record_info.xml
@@ -6,15 +6,26 @@
     android:layout_height="match_parent"
     tools:context=".RecordInfoActivity">
 
+    <include
+        android:id="@+id/include"
+        layout="@layout/fragment_title_bar"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/titlebar_height"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ScrollView
         android:id="@+id/scrollViewPhotos"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/navigation"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/include">
 
         <android.support.constraint.ConstraintLayout
             android:id="@+id/innerCLayout"
