--- a/app/src/main/res/layout/activity_user_assignment.xml
+++ b/app/src/main/res/layout/activity_user_assignment.xml
@@ -10,6 +10,12 @@
     android:weightSum="8"
     android:orientation="vertical">
 
+    <include
+        layout="@layout/fragment_title_bar"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/titlebar_height"
+        android:layout_weight="1" />
+
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -74,19 +80,5 @@
             app:layout_constraintTop_toBottomOf="@+id/removeUserButton" />
 
     </android.support.constraint.ConstraintLayout>
-
-    <android.support.design.widget.BottomNavigationView
-        android:id="@+id/navigation"
-
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_marginStart="0dp"
-        android:layout_marginEnd="0dp"
-        android:layout_weight="1"
-        android:background="?android:attr/windowBackground"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:menu="@menu/navigation" />
 
 </LinearLayout>
