--- a/app/src/main/res/layout/activity_delete_photo.xml
+++ b/app/src/main/res/layout/activity_delete_photo.xml
@@ -20,7 +20,7 @@
 
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/imageView_delete_photo"
             android:layout_width="307dp"
             android:layout_height="345dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -37,7 +37,7 @@
             android:text="@string/delete"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/imageView"
+            app:layout_constraintTop_toBottomOf="@id/imageView_delete_photo"
             android:onClick="deleteImage"
             tools:layout_editor_absoluteX="40dp"
             tools:layout_editor_absoluteY="366dp" />
