--- a/app/src/main/res/layout/activity_delete_photo.xml
+++ b/app/src/main/res/layout/activity_delete_photo.xml
@@ -20,7 +20,7 @@
 
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/imageView_delete_photo"
             android:layout_width="307dp"
             android:layout_height="345dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -37,21 +37,10 @@
             android:text="@string/delete"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/imageView"
+            app:layout_constraintTop_toBottomOf="@id/imageView_delete_photo"
             android:onClick="deleteImage"
             tools:layout_editor_absoluteX="40dp"
             tools:layout_editor_absoluteY="366dp" />
     </android.support.constraint.ConstraintLayout>
-    <android.support.design.widget.BottomNavigationView
-        android:id="@+id/navigation"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:layout_marginEnd="0dp"
-        android:layout_marginStart="0dp"
-        android:background="?android:attr/windowBackground"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:menu="@menu/navigation" />
+
 </LinearLayout>
