--- a/app/src/main/res/layout/fragment_user_assignment.xml
+++ b/app/src/main/res/layout/fragment_user_assignment.xml
@@ -6,7 +6,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BodyActivity"
     android:weightSum="8"
     android:orientation="vertical">
 
@@ -22,36 +21,36 @@
         android:layout_weight="1">
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/fragment_user_assignment_textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:text="@string/user_assignment_assigned_list"
-            app:layout_constraintBottom_toTopOf="@+id/assignedUserLIstView"
+            app:layout_constraintBottom_toTopOf="@+id/fragment_user_assignment_listView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ListView
-            android:id="@+id/assignedUserLIstView"
+            android:id="@+id/fragment_user_assignment_listView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            app:layout_constraintBottom_toTopOf="@+id/removeUserButton"
+            app:layout_constraintBottom_toTopOf="@+id/fragment_user_assignment_removeUserButton"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView6">
+            app:layout_constraintTop_toBottomOf="@+id/fragment_user_assignment_textView">
 
         </ListView>
 
         <Button
-            android:id="@+id/removeUserButton"
+            android:id="@+id/fragment_user_assignment_removeUserButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -59,14 +58,14 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
             android:text="@string/user_assignment_remove"
-            app:layout_constraintBottom_toTopOf="@+id/addAssignUserButton"
+            app:layout_constraintBottom_toTopOf="@+id/fragment_user_assignment_addAssignUserButton"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/assignedUserLIstView" />
+            app:layout_constraintTop_toBottomOf="@+id/fragment_user_assignment_listView" />
 
         <Button
-            android:id="@+id/addAssignUserButton"
+            android:id="@+id/fragment_user_assignment_addAssignUserButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -77,7 +76,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/removeUserButton" />
+            app:layout_constraintTop_toBottomOf="@+id/fragment_user_assignment_removeUserButton" />
 
     </android.support.constraint.ConstraintLayout>
 
