--- a/app/src/main/res/layout/activity_login_activity.xml
+++ b/app/src/main/res/layout/activity_login_activity.xml
@@ -7,7 +7,7 @@
     tools:context=".login_activity">
 
     <EditText
-        android:id="@+id/usernameText"
+        android:id="@+id/fragment_account_settings_usernameText"
         android:layout_width="329dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
@@ -29,7 +29,7 @@
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/usernameText" />
+        app:layout_constraintTop_toBottomOf="@+id/fragment_account_settings_usernameText" />
 
     <Button
         android:id="@+id/loginButton"
