--- a/app/src/main/res/layout/activity_problem_pop_up.xml
+++ b/app/src/main/res/layout/activity_problem_pop_up.xml
@@ -46,7 +46,7 @@
         tools:layout_editor_absoluteY="144dp" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/fragment_account_settings_accountInfoTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
