--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/phoneText"
+        android:id="@+id/fragment_account_settings_phoneText"
         android:layout_width="335dp"
         android:layout_height="45dp"
         android:layout_marginEnd="8dp"
@@ -46,10 +46,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.515"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/usernameText" />
+        app:layout_constraintTop_toBottomOf="@+id/fragment_account_settings_usernameText" />
 
     <EditText
-        android:id="@+id/usernameText"
+        android:id="@+id/fragment_account_settings_usernameText"
         android:layout_width="335dp"
         android:layout_height="45dp"
         android:layout_marginEnd="8dp"
@@ -61,10 +61,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.515"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/emailText" />
+        app:layout_constraintTop_toBottomOf="@+id/fragment_account_settings_email" />
 
     <EditText
-        android:id="@+id/emailText"
+        android:id="@+id/fragment_account_settings_email"
         android:layout_width="335dp"
         android:layout_height="45dp"
         android:layout_marginEnd="8dp"
@@ -89,7 +89,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.51"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/phoneText"
+        app:layout_constraintTop_toBottomOf="@+id/fragment_account_settings_phoneText"
         app:layout_constraintVertical_bias="0.938" />
 
 </android.support.constraint.ConstraintLayout>
