--- a/app/src/main/res/layout/fragment_account_settings.xml
+++ b/app/src/main/res/layout/fragment_account_settings.xml
@@ -16,7 +16,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/phoneText"
+        android:id="@+id/fragment_account_settings_phoneText"
         android:layout_width="335dp"
         android:layout_height="45dp"
         android:layout_marginEnd="8dp"
@@ -29,10 +29,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.515"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/emailText" />
+        app:layout_constraintTop_toBottomOf="@+id/fragment_account_settings_email" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/fragment_account_settings_contactInfoTextView"
         android:layout_width="335dp"
         android:layout_height="43dp"
         android:layout_marginEnd="8dp"
@@ -42,10 +42,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.515"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/resetPasswordButton" />
+        app:layout_constraintTop_toBottomOf="@+id/fragment_account_settings_resetPasswordButton" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/fragment_account_settings_accountInfoTextView"
         android:layout_width="335dp"
         android:layout_height="35dp"
         android:layout_marginStart="8dp"
@@ -58,7 +58,7 @@
         app:layout_constraintTop_toBottomOf="@+id/fragment_titlebar" />
 
     <EditText
-        android:id="@+id/emailText"
+        android:id="@+id/fragment_account_settings_email"
         android:layout_width="335dp"
         android:layout_height="45dp"
         android:layout_marginEnd="8dp"
@@ -71,10 +71,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.515"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toBottomOf="@+id/fragment_account_settings_contactInfoTextView" />
 
     <Button
-        android:id="@+id/editContactButton"
+        android:id="@+id/fragment_account_settings_editContactButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -82,10 +82,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/phoneText" />
+        app:layout_constraintTop_toBottomOf="@+id/fragment_account_settings_phoneText" />
 
     <Button
-        android:id="@+id/saveButton"
+        android:id="@+id/fragment_account_settings_saveButton"
         android:layout_width="113dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -93,20 +93,20 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/phoneText" />
+        app:layout_constraintTop_toBottomOf="@+id/fragment_account_settings_phoneText" />
 
     <Button
-        android:id="@+id/resetPasswordButton"
+        android:id="@+id/fragment_account_settings_resetPasswordButton"
         android:layout_width="222dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="@string/resetPasswordText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titlebar" />
+        app:layout_constraintTop_toBottomOf="@+id/fragment_account_settings_titlebar" />
 
     <LinearLayout
-        android:id="@+id/titlebar"
+        android:id="@+id/fragment_account_settings_titlebar"
         android:layout_width="335dp"
         android:layout_height="46dp"
         android:layout_marginTop="8dp"
@@ -114,10 +114,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.512"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5">
+        app:layout_constraintTop_toBottomOf="@+id/fragment_account_settings_accountInfoTextView">
 
         <TextView
-            android:id="@+id/usernamePromptText"
+            android:id="@+id/fragment_account_settings_usernamePromptText"
             android:layout_width="10dp"
             android:layout_height="45dp"
             android:layout_marginStart="4dp"
@@ -127,7 +127,7 @@
             tools:layout_editor_absoluteY="67dp" />
 
         <TextView
-            android:id="@+id/usernameText"
+            android:id="@+id/fragment_account_settings_usernameText"
             android:layout_width="wrap_content"
             android:layout_height="45dp"
             android:layout_weight="2"
