--- a/app/src/main/res/layout/fragment_body.xml
+++ b/app/src/main/res/layout/fragment_body.xml
@@ -11,7 +11,7 @@
 
 
         <ImageView
-            android:id="@+id/bodyView"
+            android:id="@+id/fragment_body_bodyView"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:clickable="true"
@@ -24,7 +24,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
-            android:id="@+id/rotateButton"
+            android:id="@+id/fragment_body_rotateButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -34,7 +34,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
-            android:id="@+id/addButton"
+            android:id="@+id/fragment_body_addButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -44,7 +44,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
-            android:id="@+id/viewAllButton"
+            android:id="@+id/fragment_body_viewAllButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
@@ -54,27 +54,27 @@
             app:layout_constraintEnd_toEndOf="parent" />
 
         <TextView
-            android:id="@+id/totalText"
+            android:id="@+id/fragment_body_totalText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="32dp"
             android:text="Total:"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/addButton" />
+            app:layout_constraintTop_toBottomOf="@+id/fragment_body_addButton" />
 
         <TextView
-            android:id="@+id/notListedText"
+            android:id="@+id/fragment_body_notListedText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:text="Not Listed: "
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/totalText" />
+            app:layout_constraintTop_toBottomOf="@+id/fragment_body_totalText" />
 
         <TextView
-            android:id="@+id/userPromptText"
+            android:id="@+id/fragment_body_userPromptText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -83,8 +83,8 @@
             android:text="Touch a Location"
             android:textSize="24sp"
             android:visibility="invisible"
-            app:layout_constraintEnd_toStartOf="@+id/rotateButton"
-            app:layout_constraintStart_toEndOf="@+id/addButton"
+            app:layout_constraintEnd_toStartOf="@+id/fragment_body_rotateButton"
+            app:layout_constraintStart_toEndOf="@+id/fragment_body_addButton"
             app:layout_constraintTop_toTopOf="parent" />
 
     </android.support.constraint.ConstraintLayout>
