--- a/app/src/main/res/layout/fragment_language.xml
+++ b/app/src/main/res/layout/fragment_language.xml
@@ -1,20 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_weight="1"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <include
         android:id="@+id/fragment_titlebar"
         layout="@layout/fragment_title_bar"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/titlebar_height" />
+        android:layout_height="@dimen/titlebar_height"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
-        android:id="@+id/settingsLinearLayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:orientation="vertical"
@@ -23,43 +25,35 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fragment_titlebar"
-        tools:context=".SettingsFragment">
-
-        <Button
-            android:id="@+id/language"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:text="@string/language_settings"
-            app:layout_constraintStart_toEndOf="@+id/titleTextView" />
-
-        <Button
-            android:id="@+id/Account"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:text="@string/account"
-            app:layout_constraintStart_toEndOf="@+id/titleTextView" />
-
-        <Button
-            android:id="@+id/userAssignmentButton"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:text="@string/user_assignment_settings" />
-
-        <Button
-            android:id="@+id/About"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:text="@string/about_settings"
-            app:layout_constraintStart_toEndOf="@+id/titleTextView" />
+        tools:context=".LanguageHandlerFragment">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:text="@string/please_choose_a_language"
+            android:textAlignment="center"
+            android:textSize="20sp" />
+
+        <Button
+            android:id="@+id/fragment_language_english_button"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:text="@string/english"
+            app:layout_constraintStart_toEndOf="@+id/fragment_list_titleTextView" />
+
+        <Button
+            android:id="@+id/fragment_language_french_button"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:text="@string/french" />
 
         <TextView
             android:layout_width="match_parent"
