--- a/app/src/main/res/layout/fragment_record_info.xml
+++ b/app/src/main/res/layout/fragment_record_info.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RecordInfoActivity">
+    tools:context=".RecordInfoFragment">
 
     <include
         android:id="@+id/include"
