--- a/app/src/main/res/layout/fragment_title_bar.xml
+++ b/app/src/main/res/layout/fragment_title_bar.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:id="@+id/titlebar"
+<LinearLayout android:id="@+id/fragment_account_settings_titlebar"
     android:layout_width="match_parent"
     android:layout_height="64dp"
     android:background="@color/colorPrimary"
@@ -10,7 +10,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
-        android:id="@+id/returnButton"
+        android:id="@+id/fragment_title_bar_returnButton"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_marginStart="8dp"
@@ -22,7 +22,7 @@
         android:src="?attr/homeAsUpIndicator" />
 
     <TextView
-        android:id="@+id/fragmentTitle"
+        android:id="@+id/fragment_title_bar_fragmentTitle"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_weight="6"
