New body image, added body location photo functionality, fixed drawing issues

--- a/app/src/main/res/layout/activity_live_camera.xml
+++ b/app/src/main/res/layout/activity_live_camera.xml
@@ -21,14 +21,15 @@
         android:id="@+id/overlayView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:scaleType="fitXY"
         android:contentDescription="@string/overlay_description"
+        android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.705"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.364" />
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/body_upright" />
 
     <ImageButton
         android:id="@+id/captureCameraButton"
