--- a/app/src/main/res/layout/fragment_body.xml
+++ b/app/src/main/res/layout/fragment_body.xml
@@ -15,8 +15,21 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:clickable="true"
-            android:src="@drawable/ic_person_outline"
-            android:scaleType="fitCenter"
+            android:scaleType="fitXY"
+            android:src="@drawable/body_upright"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/fragment_body_bodyImageView"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:clickable="true"
+            android:elevation="-1dp"
+            android:scaleType="fitXY"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -58,7 +71,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="8dp"
             android:text="Total:"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/fragment_body_addButton" />
@@ -69,7 +82,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="Not Listed: "
+            android:text="Unlisted:"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/fragment_body_totalText" />
 
@@ -77,14 +90,25 @@
             android:id="@+id/fragment_body_userPromptText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
             android:enabled="true"
             android:text="Touch a Location"
+            android:textColor="@color/common_google_signin_btn_text_dark_focused"
             android:textSize="24sp"
             android:visibility="invisible"
             app:layout_constraintEnd_toStartOf="@+id/fragment_body_rotateButton"
             app:layout_constraintStart_toEndOf="@+id/fragment_body_addButton"
             app:layout_constraintTop_toTopOf="parent" />
 
-    </android.support.constraint.ConstraintLayout>
+        <ImageButton
+            android:id="@+id/fragment_body_bodyCameraButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginStart="8dp"
+            android:src="@android:drawable/ic_menu_camera"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+</android.support.constraint.ConstraintLayout>
