Added the check patient button to the user assignment page

--- a/app/src/main/res/layout/fragment_user_assignment.xml
+++ b/app/src/main/res/layout/fragment_user_assignment.xml
@@ -32,7 +32,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="spread_inside" />
 
         <ListView
             android:id="@+id/fragment_user_assignment_listView"
@@ -41,6 +42,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
+            android:choiceMode="singleChoice"
             app:layout_constraintBottom_toTopOf="@+id/fragment_user_assignment_removeUserButton"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -55,12 +57,11 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
             android:text="@string/user_assignment_remove"
             android:textColor="@android:color/holo_red_light"
             app:layout_constraintBottom_toTopOf="@+id/fragment_user_assignment_addAssignUserButton"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/fragment_user_assignment_checkPatient"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/fragment_user_assignment_listView" />
@@ -88,8 +89,20 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/fragment_user_assignment_addAssignUserButton"
             app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintHorizontal_chainStyle="spread"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/fragment_user_assignment_removeUserButton" />
+
+        <Button
+            android:id="@+id/fragment_user_assignment_checkPatient"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:text="@string/user_assignment_checkButton"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/fragment_user_assignment_removeUserButton"
+            tools:layout_editor_absoluteY="335dp" />
 
     </android.support.constraint.ConstraintLayout>
 
